--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li><a href="#">Sports</a></li>
         </ul>
       </nav>
+      <img src="./images/menu-icon.png" alt="menu" class="menu-icon">
     </header>
 
     <main>
